--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
+	id 'maven-publish'
 }
 
 group = 'io.github.ki'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0'
 sourceCompatibility = '11'
 
 repositories {
