--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,20 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+java {
+	withSourcesJar()
+	withJavadocJar()
+}
+
+publishing {
+	publications {
+		maven(MavenPublication) {
+			from components.java
+		}
+	}
+}
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
