--- a/build.gradle
+++ b/build.gradle
@@ -2,34 +2,19 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-	id 'maven-publish'
 }
 
 group = 'io.github.ki'
-version = '0.0.3'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
-	mavenLocal()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-
-			from components.java
-			groupId = 'com.github.chunhodong'
-			artifactId = 'library'
-			version = '0.0.3'
-
-		}
-	}
 }
 
 tasks.named('test') {
