--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
+buildscript {
+	dependencies {
+		classpath "io.github.gradle-nexus:publish-plugin:1.1.0"
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
 }
 
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+apply from: "${rootDir}/scripts/publish-maven.gradle"
+apply from: 'publish.gradle'
+
 group = 'io.github.chunhodong'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '11'
 
 repositories {
