--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
 }
@@ -23,8 +22,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework:spring-context:5.3.22'
+	implementation 'org.springframework.boot:spring-boot-autoconfigure:2.7.3'
+	implementation 'org.springframework:spring-test:5.3.22'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
+	testImplementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
+	testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
 }
 
 tasks.named('test') {
