--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,11 @@
-buildscript {
-	dependencies {
-		classpath "io.github.gradle-nexus:publish-plugin:1.1.0"
-	}
-}
-
-plugins {
-	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-	id 'java'
-}
-
-apply plugin: 'io.github.gradle-nexus.publish-plugin'
-apply from: "${rootDir}/scripts/publish-maven.gradle"
-apply from: 'publish.gradle'
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'io.github.chunhodong'
 version = '0.0.1'
-sourceCompatibility = '11'
+
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
 	mavenCentral()
@@ -28,6 +18,24 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
 	testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
+}
+
+java {
+	withSourcesJar()
+	withJavadocJar()
+}
+
+publishing {
+	publications {
+		maven(MavenPublication) {
+			from components.java
+		}
+	}
+}
+
+wrapper {
+	gradleVersion = "7.5"
+	distributionType = Wrapper.DistributionType.ALL
 }
 
 tasks.named('test') {
